debian-installer (2013XXXX) UNRELEASED; urgency=low

  * Fix boot beep.
  * Add hd-media target for hurd-i386.

 -- Samuel Thibault <sthibault@debian.org>  Wed, 01 May 2013 14:18:04 +0200

debian-installer (20130430) unstable; urgency=low

  [ Aurelien Jarno ]
  * Include virtio-modules in sparc and sparc64 netboot images (Closes: #704672).

 -- Cyril Brulebois <kibi@debian.org>  Tue, 30 Apr 2013 23:10:12 +0200

debian-installer (20130415) unstable; urgency=low

  [ Aurelien Jarno ]
  * Include nic-modules in armhf/vexpress netboot image.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 15 Apr 2013 20:35:44 +0200

debian-installer (20130412) unstable; urgency=low

  [ Samuel Thibault ]
  * internal.xml: Point at the repository README instead of duplicating
    checkout information.

  [ Ben Hutchings ]
  * Include {ata,mtd,pata,sata}-modules in mx5 netboot image (Closes: #675017)
  * Replace nic-modules with nic-{usb,wireless}-modules in armhf netboot
    images (Closes: #705118)

  [ Cyril Brulebois ]
  * Amend previous changelog entry to mention that the added vexpress
    image is a netboot one.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 12 Apr 2013 17:39:04 +0200

debian-installer (20130409) unstable; urgency=low

  [ Aurelien Jarno ]
  * Build a netboot vexpress image on armhf.

  [ Christian Perrier ]
  * Update translation-status, computed with a fixed calc-release-status
    script.

  [ Cyril Brulebois ]
  * For reference, build against linux 3.2.41-2.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 09 Apr 2013 16:45:49 +0200

debian-installer (20130211) unstable; urgency=low

  [ Joey Hess ]
  * When building with localudebs, only disable secure apt checking for that
    repository, while keeping it working for network repositories,
    by using [trusted=yes] in sources.list.udeb. Closes: #696168

  [ Wouter Verhelst ]
  * Bring m68k back from the dead:
    - Use current kernel versions.
    - Point to debian-ports.org for now.