@@ -37,13 +37,13 @@ MKLIBS = mklibs
 DPKG_UNPACK_OPTIONS = --force-overwrite
 
 # The codename of the Debian release that should be installed by default.
-DEBIAN_RELEASE = wheezy
+DEBIAN_RELEASE = jessie
 
 # The version (number and codename) of the Debian release targeted by the
 # installation images. (Only the codename is used while the version number
 # has not yet been determined.)
-DEBIAN_VERSION = 7.0 (wheezy)
-DEBIAN_VERSION ?= wheezy
+DEBIAN_VERSION = 8.0 (jessie)
+DEBIAN_VERSION ?= jessie
 
 # Define here from what release (codename!) components (udebs) should be taken
 # to build debian-installer. By default this is set to 'unstable' for building
