@@ -1,7 +1,19 @@
 debian-installer (2013XXXX) UNRELEASED; urgency=low
 
+  [ Samuel Thibault ]
   * Fix boot beep.
   * Add hd-media target for hurd-i386.
+
+  [ Cyril Brulebois ]
+  * wheezy is released! The next target is jessie.
+  * Update those files accordingly:
+    - build/boot/x86/xen/debian.cfg
+    - build/config/common
+    - doc/devel/internals/building.xml
+    - debian/rules
+  * Those need a deeper look:
+    - doc/i18n/languages.xml
+    - doc/i18n/languages.xsl
 
  -- Samuel Thibault <sthibault@debian.org>  Wed, 01 May 2013 14:18:04 +0200
 
